Working ontaglost callback

--- a/apps/nfc-demo/nfc.html
+++ b/apps/nfc-demo/nfc.html
@@ -393,6 +393,7 @@
                                 alert("Ndef Write Successful: " + this.result);
                             }
                             pending.onerror = function() {
+                                alert("Error writing tag, result: " + this.result);
                                 alert("Error writing tag: " + this.error.name);
                             }
                             }
