--- a/apps/nfc-demo/nfc.html
+++ b/apps/nfc-demo/nfc.html
@@ -292,7 +292,9 @@
               var messageType = event.ndefMessages.type;
               var content = event.ndefMessages.content;
               if (messageType == "tagLost") {
-                alert("Tag no longer in range. Tag handleId: " + content.handleId);
+                var message = "Tag no longer in range. Tag HandleId: " + content.handleId;
+                console.log(message);
+                $('#area').val($('#area').val()+message+"\n");
               }
             }
           }
@@ -387,22 +389,23 @@
                         $("#nfc_contact_form_id #nfc_contact_type_id").prop('disabled', true);
                         $("#nfc_contact_form_id #nfc_contact_id_id").prop('disabled', true);
                         function writeContactFormToNdef() {
-                            // Single record call.
                             // writeContactArrayTag will write a contact array as the payload.
                             var record = contactFormToNdefRecord();
                             var pending = writeContactTag(record);
                             if (pending != null) {
-                            pending.onsuccess = function() {
-                                var msg = this.result;
-                                alert("Ndef Write Successful. RequestId: " + msg.requestId + ", Result: " + msg.status);
+                                pending.onsuccess = function() {
+                                    var msg = this.result;
+                                    var message = "Ndef Write Successful. RequestId: " + msg.requestId + ", Result: " + msg.status;
+                                    console.log(message);
+                                    $('#area').val($('#area').val()+message+"\n");
+                                }
+                                pending.onerror = function() {
+                                    var msg = this.result;
+                                    var message = "Error writing tag. RequestId: " + msg.requestId + ", Result: " + msg.status + ", Error text: " + this.error.message;
+                                    console.log(message);
+                                    $('#area').val($('#area').val()+message+"\n");
+                                }
                             }
-                            pending.onerror = function() {
-                                var msg = this.result;
-                                alert("Error writing tag. RequestId: " + msg.requestId + ", Result: " + msg.status);
-                                alert("Error Text: " + this.error.message);
-                            }
-                            }
-                            // TODO: pending.readyState to get ongoing result
                         }
                         </script>
                         <br/>
